# inos_v1

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES_v2.0.0.md  blog.md  blog_plan.md  check_hashes.js  check_sab_corruption.js  check_wasm_imports.js  check_wasm_shared.js  go.mod  go.sum  grandprix.md  inos_context.json  issues.md  pulse.md  review.md  robot.md  sab_layout.md  spec.md  spec_v2.md
.agent/rules/: architect.md
.agent/workflows/: initialize.md  renaissance-communicator.md
cmd/inos-node/: main.go
deployment/: README.md
docs/: CAPNPROTO.md  MANIFESTO.md  P2P_MESH.md  RUST_EXPLAINER.md  TODO.md  ai.md  brutal_honesty_hyper_computing_assessment.md  database.md  delegation.md  economy.md  go_wasm_memory_integrity.md  graphics.md  ping-pong-buffers.md  production_execution_plan.md  review.md  sab_layout.md  science.md  spec.md  status.md  threads.md
docs/grandprix/: README.md
frontend/: .eslintrc.json  README.md  index.html  package.json  tsconfig.json  vercel.json  vite.config.ts
frontend/app/: App.tsx
frontend/app/components/: ArchitecturalBlog.tsx  ArchitecturalBoids.tsx  ArchitectureCanvas.tsx  BirdCanvas.tsx  ModuleRegistry.tsx  ParticleCanvas.tsx  PerformanceHUD.tsx  StoryView.tsx
frontend/app/hooks/: useEconomics.ts  useIdentity.ts  useReducedMotion.ts
frontend/app/illustrations/: HistoryTimeline.tsx  LanguageTriad.tsx
frontend/app/pages/: Architecture.tsx  Cosmos.tsx  Diagnostics.tsx  Genesis.tsx  GrandPrix.tsx  History.tsx  Insight.tsx  Landing.tsx  Problem.tsx  WhatsNext.tsx
frontend/app/styles/: manuscript.ts  minimal.css  motion.ts  styled.d.ts  theme.ts
frontend/app/ui/: ChapterNav.tsx  D3Container.tsx  Layout.tsx  MobileDock.tsx  MysticLoader.tsx  Navigation.tsx  NumberFormatter.tsx  PageTransition.tsx  RollingCounter.tsx  (+1 more)
frontend/docs/: BIG_BANG_DEMO.md
frontend/nginx/: nginx.conf
frontend/public/: kernel.wasm.br
integration/: Cargo.toml  PERFORMANCE.md  PHASE2_PROGRESS.md  README.md  TEST_COVERAGE.md  e2e_results.txt  go.mod  go.sum  package.json  playwright.config.js  test_output.txt
integration/e2e/: database_storage.spec.js  debug_economics.spec.js  deep_validation.spec.js  delegation_pipeline.spec.js  economic_benchmarks.spec.js  gpu_compute.spec.js  mesh_churn_nat_storm.spec.js  mesh_local_signaling.spec.js  mesh_network.spec.js  mesh_telemetry.spec.js  ml_pipeline.spec.js  system_health.spec.js
integration/playwright-report/: index.html
integration/sab_communication/: edge_cases_test.go  epoch_test.rs  performance_test.go  zero_copy_test.go
integration/signaling/: server.js  server.test.js
integration/src/: lib.rs
integration/test-results/: .last-run.json
integration/test-results/delegation_pipeline-INOS-D-8fc3d-ndle-concurrent-delegations-chromium/: error-context.md
integration/test-results/delegation_pipeline-INOS-D-8fc3d-ndle-concurrent-delegations-firefox/: error-context.md
integration/test-results/gpu_compute-INOS-GPU-Compu-99394-ration-instance-matrix-gen--chromium/: error-context.md
internal/core/: credits.go  identity.go  packet.go  processor.go
internal/network/: mesh.go
kernel/: .golangci.yml  README.md  bridge.go  go.mod  go.sum  lifecycle.go  main.go  mesh_bridge.go  mesh_config.go  supervisor_test_full.txt  test_output.txt
kernel/runtime/: capabilities.go  profiler_native.go  profiler_wasm.go  role.go
kernel/threads/: integration_test.go  signal_loop.go  supervisor.go  unit_loader.go
kernel/utils/: errors.go  graceful.go  id.go  logger.go  logger_native.go  logger_wasm.go
misc/: go_wasm_memory_integrity.md
modules/: Cargo.toml  README.md  build.rs  clippy.toml
modules/.cargo/: config.toml
modules/compute/: Cargo.toml  README.md
modules/compute/src/: benchmarks.rs  engine.rs  executor.rs  lib.rs
modules/compute/src/units/: api_proxy.rs  audio.rs  boids.rs  crypto.rs  data.rs  drone.rs  gpu.rs  image.rs  math.rs  ml.rs  mod.rs  physics.rs  robot.rs  storage.rs  stub.rs  tests.rs  video.rs
modules/compute/src/units/gpu_shaders/: boids.wgsl  fft.wgsl  matmul.wgsl  matrix_gen.wgsl  nbody.wgsl  pbr.wgsl  reduction_sum.wgsl
modules/diagnostics/: Cargo.toml
modules/diagnostics/src/: lib.rs
modules/drivers/: Cargo.toml  DRIVERS_ARCHITECTURE.md  LIBRARY_STRATEGY.md  LIBRARY_VERIFICATION.md  TODO_IMPLEMENTATION.md
modules/drivers/src/: actor.rs  actuation.rs  commands.rs  lib.rs  perception.rs  positioning.rs  reader.rs  sensor.rs  tests.rs
modules/drivers/src/mavlink/: mod.rs
modules/drivers/src/ros2/: mod.rs
modules/mining/: Cargo.toml  README.md
modules/mining/src/: lib.rs
modules/ml/: Cargo.toml  build.rs
modules/ml/src/: brain.rs  engine.rs  lib.rs
modules/ml/src/jobs/: inference.rs  layers.rs  mod.rs  tensor.rs  training.rs
modules/ml/src/models/: audio.rs  llm.rs  mod.rs  vision.rs
modules/ml/src/p2p/: cache.rs  chunks.rs  config.rs  distributed.rs  error.rs  mod.rs  registry.rs  verification.rs
modules/science/: Cargo.toml  build.rs
modules/science/src/: lib.rs  math.rs  types.rs
modules/science/src/flux/: anchor.rs  boundary.rs  mod.rs
modules/science/src/matter/: atomic.rs  continuum.rs  kinetic.rs  mod.rs
modules/science/src/mesh/: cache.rs  coordinator.rs
modules/science/src/ml/: adaptive_allocator.rs  mod.rs
modules/science/src/mosaic/: bridge.rs  dispatch.rs  mod.rs  registry.rs  shard.rs
modules/sdk/: Cargo.toml  build.rs
modules/sdk/src/: arena.rs  auto_register.rs  benchmarks.rs  compression.rs  context.rs  core_tests.rs  crdt.rs  credits.rs  guard.rs  hashing.rs  identity.rs  js_interop.rs  layout.rs  lib.rs  logging.rs  pingpong.rs  registry.rs  ringbuffer.rs  sab.rs  sab_benchmarks.rs  shader_registry.rs  signal.rs  social_graph.rs  syscalls.rs
modules/storage/: Cargo.toml
modules/storage/src/: cas_tests.rs  lib.rs  tests.rs
protocols/: README.md
scripts/: check_wasm_import_signature.js  fix-capnp-imports.js  gen-capnp-consts-ts.js  gen-proto-go.sh  gen_context.go  patch_wasm_import.js  patch_wasm_memory.js  verify_symbols.js
test/: test_nodes.go
wasm/: executor.go
(+257 files in other folders)
