[workspace]
members = [
    "sdk",
    "compute",
    "storage",
    "drivers",
    "diagnostics",
]
resolver = "2"

[profile.release]
opt-level = "z"       # Optimize for size
lto = "fat"           # Fat Link Time Optimization
codegen-units = 1     # Single unit for maximum optimization
panic = "abort"       # Remove unwinding bloat
strip = true          # Remove symbols
debug = false         # No debug info
incremental = false   # Maximize optimizations
