[package]
name = "compute"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sdk = { path = "../sdk" }
js-sys = "0.3"
async-trait = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Navigator",
    "Storage",
    "Blob",
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbIndex",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "IdbCursorWithValue",
    "IdbKeyRange",
    "IdbOpenDbRequest",
    "IdbObjectStoreParameters",
    "IdbIndexParameters",
    "DomStringList",
    "Event",
    # File System Access API (OPFS)
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "FileSystemGetDirectoryOptions",
    "FileSystemGetFileOptions",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "RtcPeerConnection",
    "RtcDataChannel",
    "RtcConfiguration",
    "RtcIceServer",
    "RtcSdpType",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcDataChannelInit",
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
] }
gloo-net = "0.6"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = { version = "1.5", features = ["rayon"] }
thiserror = "2.0"
log = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }
tokio = { version = "1.0", features = ["sync", "macros", "rt", "time"] }
futures = "0.3"
once_cell = "1.18"

# Linear algebra for graphics and physics
nalgebra = { version = "0.33", default-features = false, features = ["std"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
fast_image_resize = { version = "3.0", features = [] }
imageproc = "0.25"
base64 = "0.21"

# Parallel processing and caching
rayon = "1.8"
dashmap = "5.5"
num_cpus = "1.16"

# Cryptography (production-hardened with hardware acceleration)
aes-gcm = { version = "0.10", features = ["aes"] }
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.1", features = ["std"] }
x25519-dalek = "2.0"

# Hashing (with assembly optimizations)
sha2 = { version = "0.10", features = ["asm"] }
hmac = "0.12"

# Key derivation
hkdf = "0.12"
argon2 = "0.5"
pbkdf2 = "0.12"

# Security utilities
subtle = { version = "2.5", features = ["std"] }
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Randomness
rand = { version = "0.8", features = ["std_rng"] }

# Data processing (Arrow ecosystem - WASM-compatible, SIMD built-in)
arrow = { version = "53.3", default-features = false, features = [
    "ipc",
    "json",
    "csv"
]}
parquet = { version = "53.3", default-features = false, features = [
    "arrow",
    "snap",  # Snappy compression (pure Rust)
    "lz4",   # LZ4 compression (pure Rust)
]}
bytes = "1.5"  # Required for Parquet reader

# Audio processing (Pure Rust - WASM compatible)
symphonia = { version = "0.5", default-features = false, features = ["mp3", "aac", "flac", "wav"] }
hound = "3.5"  # WAV encode/decode
rustfft = { version = "6.2", features = [] }  # FFT with WASM SIMD (enabled via target features)
rubato = "0.15"  # Resampling
biquad = "0.4"  # Filters

# Cap'n Proto
capnp = "0.19"

# GPU shader validation (200KB, WASM-compatible)
naga = { version = "0.19", features = ["wgsl-in"] }
regex = { version = "1.10", default-features = false, features = ["std", "perf", "unicode-perl"] }

# Module Bridges
# All modules removed - compute is now self-contained
