[package]
name = "drivers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sdk = { path = "../sdk" }
web-sys = { version = "0.3", features = ["Serial", "Usb", "Bluetooth", "console"] }
capnp = "0.19"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
js-sys = "0.3"
