[package]
name = "drivers"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sdk = { path = "../sdk" }
getrandom = { version = "0.2", features = ["custom"] }
capnp = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
parking_lot = "0.12"
once_cell = "1.19"


# Hardware Abstraction Layer
embedded-hal = "1.0"
embedded-hal-async = "1.0"

# Positioning & Navigation
ahrs = { version = "0.6", optional = true }  # AHRS algorithms (Madgwick, Mahony)
nalgebra = "0.32"  # Linear algebra for transformations

# Robotics Protocols
mavlink = { version = "0.12", optional = true }
ros2-client = { version = "0.6", optional = true }

# IoT & Communication
rumqttc = { version = "0.24", optional = true }
socketcan = { version = "3.3", optional = true }
btleplug = { version = "0.11", optional = true }

# Serial communication
serialport = { version = "4.3", optional = true }

[features]
default = []
positioning = ["ahrs"]
protocols = ["mavlink", "ros2-client"]
iot = ["rumqttc", "socketcan", "btleplug"]
serial = ["serialport"]
