[package]
name = "ml"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core ML library (pure Rust, WASM-compatible)
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"

# Model formats
safetensors = "0.4"

# GPU support via wgpu (WebGPU for WASM, Vulkan/Metal/DX12 for native)
wgpu = "22"

# WASM support
sdk = { path = "../sdk" }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Gpu", "GpuDevice", "GpuAdapter", "Window", "Storage"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# P2P dependencies
async-trait = "0.1"
futures = "0.3"
dashmap = "5.5"
moka = { version = "0.12", features = ["future"] }
blake3 = "1.5"
tokio = { version = "1.0", features = ["sync", "time", "macros", "rt"] }

# Logging
log = "0.4"

# Randomness for WASM
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.0", features = ["v4", "js"] }

# WASM Async

# Utilities
thiserror = "1.0"

# Error handling
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["tokio", "capnp"]
tokio = []
console_error_panic_hook = ["dep:console_error_panic_hook"]
capnp = []

[dependencies.capnp]
version = "0.19"

[build-dependencies]
capnpc = "0.19"
