[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
capnp = "0.19"
blake3 = "1.5"
thiserror = "1.0"
hex = "0.4"
dashmap = "5.5"
futures = "0.3"
rayon = { version = "1.8", optional = true }
automerge = "0.5" # Using stable version
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
bincode = "1.3"
web-time = "1.0"
wasm-timer = "0.2"
brotli = { version = "3.3", features = ["std"] }
snap = "1.1" # Snappy
lz4_flex = "0.11" # Pure Rust LZ4 implementation
once_cell = "1.18"
getrandom = { version = "0.2", features = ["custom"] }
getrandom03 = { package = "getrandom", version = "0.3", default-features = false }
uuid = { version = "1.19", features = ["rng-getrandom"] }

[build-dependencies]
capnpc = "0.19"

[features]
parallel = ["dep:rayon"]
